--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:site" content="@example_handle">
 <meta name="twitter:title" content="Asian Gay Porn XXX Video 18+">
 <meta name="twitter:description" content="Asian Gay Porn XXX Video 18+">
-<meta name="twitter:image" content="">
+<meta name="twitter:image" content="https://github.com/VidFinderAI/AsianGAYXXX/blob/main/ttyu.jpeg?raw=true">
 <!-- Redirect to YouTube video -->
 <meta http-equiv="refresh" content="0; url=https://youtu.be/F7JA5J5Kc4Q?si=uUmynko2DcHK0yCG">
 </head>
